# rust-admin

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  readme.md  vite.config.js
.cursor/rules/: rules.mdc
.cursor/scopes/: DDD-Refactoring.md  DDD-Rust-Admin-Architecture.md  TauriAdminSystem.md
src/: App.vue  Test.vue  main.js  main.rs  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api/: auth.rs  categories.rs  logs.rs  mod.rs  orders.rs  products.rs  roles.rs  settings.rs  stats.rs  users.rs
src-tauri/src/database/: migrations.rs  mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/identity/: mod.rs
src-tauri/src/domain/identity/value_objects/: mod.rs
src-tauri/src/domain/shared/: mod.rs
src-tauri/src/domain/shared/entities/: aggregate_root.rs  entity.rs  mod.rs
src-tauri/src/domain/shared/errors/: domain_error.rs  mod.rs  validation_error.rs
src-tauri/src/domain/shared/events/: domain_event.rs  event_publisher.rs  mod.rs
src-tauri/src/domain/shared/value_objects/: id.rs  mod.rs  money.rs  timestamp.rs
src-tauri/src/models/: category.rs  log.rs  mod.rs  order.rs  product.rs  settings.rs  stats.rs  user.rs
src-tauri/src/utils/: mod.rs  permissions.rs
src/api/: auth.rs  index.js  mod.rs  users.rs
src/database/: migrations.rs  mod.rs
src/i18n/: index.js
src/i18n/locales/: zh-CN.js
src/layout/: BasicLayout.vue
src/locales/: en-US.js  zh-CN.js
src/models/: category.rs  mod.rs  order.rs  product.rs  role.rs  user.rs
src/router/: index.js
src/stores/: auth.js  permissions.js  users.js
src/utils/: roleTranslation.js
src/views/: Categories.vue  Dashboard.vue  Login.vue  Orders.vue  Products.vue  Settings.vue  Users.vue
