[package]
name = "rust-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = [ "window-show", "dialog-save", "window-close", "dialog-open", "fs-remove-dir", "window-unmaximize", "dialog-ask", "window-start-dragging", "dialog-confirm", "fs-rename-file", "window-maximize", "fs-create-dir", "fs-remove-file", "fs-exists", "fs-copy-file", "dialog-message", "window-minimize", "notification-all", "http-all", "shell-open", "fs-read-file", "window-unminimize", "window-hide", "fs-write-file", "fs-read-dir"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.15"
anyhow = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
