[package]
name = "rust-admin"
version = "0.1.0"
description = "基于DDD架构的Tauri + Vue 3后台管理系统"
authors = ["Rust Admin Team"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Tauri框架
tauri = { version = "1.6", features = ["api-all"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# UUID生成
uuid = { version = "1.0", features = ["v4", "serde"] }

# 密码加密
bcrypt = "0.15"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 异步特征
async-trait = "0.1"

# 正则表达式
regex = "1.0"

# 日志
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
# 测试工具
tokio-test = "0.4"
rstest = "0.18"
mockall = "0.11"

[features]
custom-protocol = ["tauri/custom-protocol"] 